configuração do script do jest

--- a/módulo-3/1-teste-automatizados/package.json
+++ b/módulo-3/1-teste-automatizados/package.json
@@ -4,7 +4,7 @@
   "main": "index-1-require.js",
   "type": "commonjs",
   "scripts": {
-    "test": "jest"
+    "jest": "jest"
   },
   "keywords": [],
   "author": "",
