--- a/módulo-3/1.2-teste-automatizados-ESModule/package.json
+++ b/módulo-3/1.2-teste-automatizados-ESModule/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "jest": "jest"
+    "jest": "jest",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
