--- a/módulo-3/3-rotas-intermediarios-controladores/package.json
+++ b/módulo-3/3-rotas-intermediarios-controladores/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "nodemon -exec ts-node src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc"
   },
@@ -19,7 +19,6 @@
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
 }
