--- a/módulo-3/6-API-REST-orientacao-objetos/package.json
+++ b/módulo-3/6-API-REST-orientacao-objetos/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.8",
+    "cowsay": "^1.6.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
