--- a/módulo-3/8-Pratica-de-API-Assincronismo-Testes/package.json
+++ b/módulo-3/8-Pratica-de-API-Assincronismo-Testes/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,9 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
     "cowsay": "^1.6.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
