--- a/módulo-3/8-Pratica-de-API-Assincronismo-Testes/package.json
+++ b/módulo-3/8-Pratica-de-API-Assincronismo-Testes/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "cowsay": "^1.6.0",
     "jest": "^29.7.0",
