--- a/módulo-3/9-Tratamento-Erros-Heranca-Polimorfismo/package.json
+++ b/módulo-3/9-Tratamento-Erros-Heranca-Polimorfismo/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "9-tratamento-erros-heranca-polimorfismo",
+  "name": "8-pratica-de-api-assincronismo-testes",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.1",
+    "cowsay": "^1.6.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   }
 }
