--- a/módulo-4/7-conexao-nodejs-postgresql/docker-compose.yml
+++ b/módulo-4/7-conexao-nodejs-postgresql/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-      POSTGRES_DB: empresas_db
+      POSTGRES_DB: empresa_db
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     ports:
