--- a/módulo-4/8-autenticacao-criptografia/package.json
+++ b/módulo-4/8-autenticacao-criptografia/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node ./src/index.ts",
-    "start": "npx tsc"
+    "start": "npx tsc",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +14,11 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/pg": "^8.11.11",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
