--- a/módulo-4/8-autenticacao-criptografia/package.json
+++ b/módulo-4/8-autenticacao-criptografia/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/pg": "^8.11.11",
@@ -23,6 +24,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.14.1"
