--- a/módulo-4/8-autenticacao-criptografia/package.json
+++ b/módulo-4/8-autenticacao-criptografia/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.11.11",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
